# gofr-np

./: .gitignore  README.md  REMEDIATION_PLAN.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
app/: config.py  main_mcp.py  main_mcpo.py  main_web.py  web_server.py
app/auth/: __init__.py  factory.py  middleware.py  service.py
app/errors/: __init__.py  mapper.py
app/exceptions/: __init__.py  base.py
app/logger/: __init__.py  console_logger.py  decorators.py  structured_logger.py
app/math_engine/: __init__.py  base.py  engine.py
app/math_engine/capabilities/: __init__.py  curvefit.py  elementwise.py  financial.py
app/mcp_server/: __init__.py  mcp_server.py  tool_registry.py
app/mcpo/: __init__.py  config.py  wrapper.py
app/startup/: __init__.py  auth_config.py  validation.py
app/web_server/: __init__.py  web_server.py
config/: gofr_approles.json
docker/: Dockerfile.base  Dockerfile.dev  Dockerfile.dev.new  Dockerfile.openwebui  Dockerfile.prod  build-base.sh  build-dev.sh  build-dev.sh.new  build-openwebui.sh  build-prod.sh  compose.dev.yml  compose.prod.yml  entrypoint-dev.sh  entrypoint-dev.sh.new  entrypoint-prod.sh  run-dev.sh  run-dev.sh.new  run-openwebui.sh  run-prod.sh  start-prod.sh  stop-prod.sh
docs/: commons_auth_migration_implementation_plan.md  commons_auth_migration_spec.md  curvefit.md  data_hardening_implementation_plan.md  data_hardening_proposal.md  elementwise.md  financial.md  tools.md
docs/archive/: authservice_signature_mismatch_strategy.md  compose_migration_plan.md  compose_migration_spec.md  devcontainer_docker_access_implementation_plan.md  devcontainer_docker_access_spec.md  np_auth_defaults_and_vault_jwt_implementation_plan.md  np_auth_defaults_and_vault_jwt_spec.md  resolve_auth_config_importerror_strategy.md
scripts/: bootstrap_gofr_np.sh  ensure_approle.sh  ensure_test_tokens.py  gofrnp.env  migrate_secrets_to_volume.sh  project.env.example  restart_servers.sh  run-dev-container.sh  run-dev.sh  run_tests.sh  start-test-env.sh  token_manager.sh
test/: conftest.py
test/code_quality/: test_code_quality.py
test/mcp/: test_boundary_cases.py  test_curve_fit.py  test_financial.py  test_financial_bonds.py  test_financial_edge_cases.py  test_financial_options.py  test_financial_rates.py  test_financial_technicals.py  test_fuzz_math.py  test_math_compute.py
