[project]
name = "gofr-np"
version = "0.1.0"
description = "Hello World MCP Server"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.9.0",
    "pydantic>=2.0",
    "uvicorn>=0.30.0",
    "fastapi>=0.111.0",
    "starlette>=0.37.0",
    "PyJWT>=2.8.0",
    "httpx>=0.27.0",
    "html2text>=2025.4.15",
    "weasyprint>=67.0",
    "tensorflow>=2.15.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "mcpo>=0.0.19",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
filterwarnings = [
    "ignore::RuntimeWarning:matplotlib",
]
